Swift Clone Working

--- a/src/main/resources/swift.properties
+++ b/src/main/resources/swift.properties
@@ -3,18 +3,12 @@ intervalToUpdateUI=
 backupInterval=
 
 
-########################### BACKUP FTP SERVER #################################################
-ftpServer=
-ftpPort=
-ftpUser=
-ftpPassword=
-
-
 
 ####################################SWIFT###################################
 remoteSwiftDeltaJsonFileLocation=
 remoteSwiftFilesLocation=
 ################################# BACKUP SWIFT  ################################################
+
 
 swiftSourceUrl=
 swiftSourceAccountsAccessUrl=
@@ -31,6 +25,7 @@ swiftDestAccountAccessUrl=
 swiftDestCreateAccountUrl=
 swiftDestGetSwiftAuthToken=
 
+
 localSwiftDeltaJsonFileLocation=
 
 swiftaccounttoberestored=
@@ -42,4 +37,19 @@ swiftDestSwauthKey=
 ####################### BackupHistory  ##############################################
 backupHistoryLocation=
 backupHistoryJsonName=
+
+
+swiftSourceUrl=
+swiftSourceAccountsAccessUrl=
+
+swiftDestinationUrl=
+swiftDestinationAccountsAccessUrl=
+
+swiftSourceAccount=
+swiftSourceUser=
+swiftSourcePassword=
+
+swiftDestinationAccount=
+swiftDestinationUser=
+swiftDestinationPassword=
 
