--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,12 @@ dependencies {
        
     compile group: 'commons-io', name: 'commons-io', version: '2.5' 
     compile group: 'org.json', name: 'json', version: '20090211'
+	
+	compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.0'	
+    compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'com.sun.jersey:jersey-server:1.9.1'
+    compile "commons-codec:commons-codec:1.5"
+  	'org.pacesys:openstack4j:1.0.1'
   
 }
 
